# inlining-analyzer

./: .gitignore  CMakeLists.txt  README.md  doxygen.config  sonar-project.properties
include/: Analyzer.hpp  CallGraph.hpp  Graph.hpp  GraphReader.hpp  Infos.hpp  InfosOld.hpp  Inlining.hpp  Logging.hpp  Parameters.hpp  Reports.hpp  Sorters.hpp  Timer.hpp  Utils.hpp  functions.hpp
src/: Analyzer.cpp  CallGraph.cpp  Checks.cpp  GraphReader.cpp  Infos.cpp  InfosOld.cpp  Inlining.cpp  Parameters.cpp  Reports.cpp  Timer.cpp  Utils.cpp  appgenerator.cpp  bench.cpp  function-benchmark.cpp  function-library.cpp  functions.cpp  generator.cpp  main.cpp
tools/: converter.py
